# StitchesSoftRenderer

./: CMakeLists.txt  main.cpp
